--- a/clases/clase1.tex
+++ b/clases/clase1.tex
@@ -1,45 +1,4 @@
-
-\documentclass[10pt]{article}
-\usepackage[utf8]{inputenc}
-\usepackage[activeacute,spanish,es-nodecimaldot]{babel}
-\usepackage[left=1.5cm,top=1.5cm,right=1.5cm, bottom=1.5cm,letterpaper, includeheadfoot]{geometry}
-\usepackage[parfill]{parskip}
-
-\usepackage{amssymb, amsmath, amsthm}
-\usepackage{graphicx}
-\usepackage{lmodern,url}
-\usepackage{paralist} %util para listas compactas
-
-\usepackage{fancyhdr}
-\pagestyle{fancy}
-\fancypagestyle{plain}{%
-\fancyhf{}
-\lhead{\footnotesize\itshape\bfseries\rightmark}
-\rhead{\footnotesize\itshape\bfseries\leftmark}
-}
-
-
-% macros
-\newcommand{\QQ}{\mathbb Q}
-\newcommand{\RR}{\mathbb R}
-\newcommand{\NN}{\mathbb N}
-\newcommand{\ZZ}{\mathbb Z}
-\newcommand{\CC}{\mathbb C}
-\newcommand{\OPT}{\mathrm{OPT}}
-
-
-%Teoremas, Lemas, etc.
-\theoremstyle{plain}
-\newtheorem{teo}{Teorema}
-\newtheorem{lem}{Lema}
-\newtheorem{prop}{Proposición}
-\newtheorem{cor}{Corolario}
-
-\theoremstyle{definition}
-\newtheorem{defi}{Definición}
-\newtheorem{eje}{Ejemplo}
-\newtheorem{ejer}{Ejercicio}
-% fin macros
+%!TEX root = ../notas_de_clase.tex
 
 %%%%% NOMBRE ESCRIBAS Y FECHA
 \newcommand{\sca}{Sebastian Bustos}
@@ -56,29 +15,8 @@
 
 \begin{document}
 %Encabezado
-\fancyhead[L]{Facultad de Ciencias Físicas y Matemáticas}
-\fancyhead[R]{Universidad de Chile}
-\vspace*{-1.2 cm}
-\begin{minipage}{0.6\textwidth}
-\begin{flushleft}
-\hspace*{-0.5cm}\textbf{MA4702. Programación Lineal Mixta. 2020.}\\
-\hspace*{-0.5cm}\textbf{Profesor:} José Soto\\
-\hspace*{-0.5cm}\textbf{Escriba(s):} \sca, \scb ~y \scc.\\
-\hspace*{-0.5cm}\textbf{Fecha:} \fecha.
-\end{flushleft}
-\end{minipage}
-\begin{minipage}{0.36\textwidth}
-\begin{flushright}
-\includegraphics[scale=0.15]{fcfm}
-\end{flushright}
-\end{minipage}
-\bigskip
+\input{utils/encabezado}
 %Fin encabezado
-
-\begin{center}
-\LARGE\textbf{Cátedra \catnum}
-\end{center}
-
 
 \section*{Introducción}
 
