--- a/clases/clase2.tex
+++ b/clases/clase2.tex
@@ -1,50 +1,4 @@
-\documentclass[10pt]{article}
-\usepackage[utf8]{inputenc}
-\usepackage[activeacute,spanish,es-nodecimaldot]{babel}
-\usepackage[left=1.5cm,top=1.5cm,right=1.5cm, bottom=1.5cm,letterpaper, includeheadfoot]{geometry}
-\usepackage[parfill]{parskip}
-
-\usepackage{amssymb, amsmath, amsthm}
-\usepackage{graphicx}
-\usepackage{lmodern,url}
-\usepackage{paralist} %util para listas compactas
-\usepackage{verbatim}
-\usepackage{float}
-\usepackage{tikz}
-\usetikzlibrary{babel}
-
-\usepackage{fancyhdr}
-\pagestyle{fancy}
-\fancypagestyle{plain}{%
-\fancyhf{}
-\lhead{\footnotesize\itshape\bfseries\rightmark}
-\rhead{\footnotesize\itshape\bfseries\leftmark}
-}
-
-
-% macros
-\newcommand{\QQ}{\mathbb Q}
-\newcommand{\RR}{\mathbb R}
-\newcommand{\NN}{\mathbb N}
-\newcommand{\ZZ}{\mathbb Z}
-\newcommand{\CC}{\mathbb C}
-\newcommand{\Ord}[1][n]{\ensuremath{ \mathcal{O}(#1) }}
-\DeclareMathOperator{\conv}{conv}
-
-%Teoremas, Lemas, etc.
-\theoremstyle{plain}
-\newtheorem{teo}{Teorema}
-\newtheorem{lem}{Lema}
-\newtheorem{prop}{Proposición}
-\newtheorem{cor}{Corolario}
-\newtheorem{obs}{Observaci\'on}
-
-\theoremstyle{definition}
-\newtheorem{defi}{Definición}
-\newtheorem{eje}{Ejemplo}
-\newtheorem{ejer}{Ejercicio}
-
-% fin macros
+%!TEX root = ../notas_de_clase.tex
 
 %%%%% NOMBRE ESCRIBAS Y FECHA
 \newcommand{\sca}{Matías Azócar}
@@ -61,28 +15,10 @@
 
 \begin{document}
 %Encabezado
-\fancyhead[L]{Facultad de Ciencias Físicas y Matemáticas}
-\fancyhead[R]{Universidad de Chile}
-\vspace*{-1.2 cm}
-\begin{minipage}{0.6\textwidth}
-\begin{flushleft}
-\hspace*{-0.5cm}\textbf{MA4702. Programación Lineal Mixta. 2020.}\\
-\hspace*{-0.5cm}\textbf{Profesor:} José Soto\\
-\hspace*{-0.5cm}\textbf{Escriba(s):} Matías Azócar, Carolina Chiu y Francisco Muñoz.\\
-\hspace*{-0.5cm}\textbf{Fecha:} 23 de marzo de 2020.
-\end{flushleft}
-\end{minipage}
-\begin{minipage}{0.36\textwidth}
-\begin{flushright}
-\includegraphics[scale=0.15]{fcfm}
-\end{flushright}
-\end{minipage}
-\bigskip
+\input{utils/encabezado}
 %Fin encabezado
 
-\begin{center}
-\LARGE\textbf{Cátedra 2 }
-\end{center}
+\section*{Introducción}
 
 En esta cátedra se verán dos temas principales: se comenzará dando un recorrido por la historia de los algoritmos PL/PLM a modo de motivación, para después retomar el contenido de la clase pasada y estudiar más en detalle el concepto de las \textit{formulaciones}.
 
