--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 \documentclass[10pt]{article}
 
-% usar notas al margen
-% \def\notasalmargen{true}
+% usar notas al margen (1 para usar notas al margen, 0 si no)
+\def\notasalmargen{1}
 
 % ========= no tocar ========== 
 % preámbulo
