--- a/utils/encabezado.tex
+++ b/utils/encabezado.tex
@@ -1,4 +1,11 @@
 
+% notas al margen
+\ifnum \notasalmargen=1
+\newgeometry{left=1.5cm,top=1.5cm,right=1.5cm, bottom=1.5cm,letterpaper, includeheadfoot, outer=5cm, heightrounded, marginparwidth=4cm, marginparsep=-2.5cm}
+\savegeometry{notas-al-margen}
+\fi
+%fin de notas al margen
+
 \fancyhead[L]{Facultad de Ciencias Físicas y Matemáticas}
 \fancyhead[R]{Universidad de Chile}
 \vspace*{-1.2 cm}
@@ -12,7 +19,11 @@
 \end{minipage}
 \begin{minipage}{0.36\textwidth}
 \begin{flushright}
+\ifnum \notasalmargen=1
+\hspace*{6cm}\includegraphics[scale=0.15]{fcfm}
+\else
 \includegraphics[scale=0.15]{fcfm}
+\fi
 \end{flushright}
 \end{minipage}
 \bigskip
@@ -20,12 +31,3 @@
 \begin{center}
 \LARGE\textbf{Cátedra \catnum}
 \end{center}
-
-% notas al margen
-% \newgeometry{left=1.5cm,top=1.5cm,right=1.5cm, bottom=1.5cm,letterpaper, includeheadfoot, outer=5cm, heightrounded, marginparwidth=4cm, marginparsep=-2.5cm}
-% \savegeometry{notas-al-margen}
-% \newgeometry{top=1.5cm, bottom=1.5cm, outer=5cm, inner=2cm, heightrounded, marginparwidth=4cm, marginparsep=-2.5cm}
-% \savegeometry{notas-al-margen}
-%fin de notas al margen
-
-% left=1.5cm,top=1.5cm,right=1.5cm, bottom=1.5cm,letterpaper, includeheadfoot
