Agregado comando NAM (Notas Al Margen)

--- a/clases/clase3.tex
+++ b/clases/clase3.tex
@@ -1,3 +1,4 @@
+%!TEX root = ../notas_de_clase.tex
 DFFDVNJDGZNVKHVHHBVVVVVVVVVVV YER4YTER\ref{alg:bnb}\begin{€T\ref{alg:bnb}\begin{T\ref{alg:bnb}6ER6RYREETYERWTEW\ref{alg:bnb}\begin{T6 UY#~¬4T~¬T #~¬¬~#TR6TTT \begin{GGGGSDGHDHSCYYXYSDXD\documentclass[10pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[activeacute,spanish,es-nodecimaldot]{babel}
