--- a/utils/cmd.tex
+++ b/utils/cmd.tex
@@ -21,5 +21,12 @@
 \newtheorem{eje}{Ejemplo}
 \newtheorem{ejer}{Ejercicio}
 
-
+% Comando para notas al margen
+\def\NAM#1[#2]{
+\ifnum \notasalmargen=1
+#1
+\else
+#2
+\fi
+}
 % fin macros
