Arreglado la visualización de los apuntes

--- a/clases/clase1.tex
+++ b/clases/clase1.tex
@@ -224,8 +224,7 @@ Modificar SP-Conector para que incluso cuando $\ell$ pueda tomar valores nulos s
 Es importante notar que la cantidad de restricciones crece de manera exponencial con el tamaño, luego, si bien el modelo soluciona el problema, en la practica el tiempo en que se ejecute el programa va a ser grande.
 
 Por lo anterior es conveniente plantear el problema de otra manera. 
-
-\newpage
+\NAM{\newpage}{}
     \item \textbf{(Mediante flujos)} Recordemos la definición de flujo: 
     
     
