--- a/utils/cmd.tex
+++ b/utils/cmd.tex
@@ -22,7 +22,7 @@
 \newtheorem{ejer}{Ejercicio}
 
 % Comando para notas al margen
-\def\NAM#1[#2]{
+\def\NAM#1#2{
 \ifnum \notasalmargen=1
 #1
 \else
