--- a/utils/encabezado.tex
+++ b/utils/encabezado.tex
@@ -6,14 +6,14 @@
 \NAM{
 \newgeometry{left=1.5cm,top=1.5cm,right=1.5cm, bottom=1.5cm,letterpaper, includeheadfoot, outer=5cm, heightrounded, marginparwidth=4cm, marginparsep=-2.5cm}
 \savegeometry{notas-al-margen}
-}[]
+}{}
 
 %fin de notas al margen
 
 \fancyhead[L]{Facultad de Ciencias Físicas y Matemáticas}
 \fancyhead[R]{Universidad de Chile}
 \vspace*{-1.2 cm}
-\begin{minipage}{0.6\textwidth}
+\NAM{\begin{minipage}{0.7\textwidth}}{0.6\textwidth}
 \begin{flushleft}
 \hspace*{-0.5cm}\textbf{MA4702. Programación Lineal Mixta. 2020.}\\
 \hspace*{-0.5cm}\textbf{Profesor:} José Soto\\
@@ -21,18 +21,9 @@
 \hspace*{-0.5cm}\textbf{Fecha:} \fecha.
 \end{flushleft}
 \end{minipage}
-\begin{minipage}{0.36\textwidth}
+\NAM{\begin{minipage}{0.4\textwidth}}{\begin{minipage}{0.36\textwidth}}
 \begin{flushright}
-\ifnum \notasalmargen=1
-\hspace*{6cm}\includegraphics[scale=0.15]{fcfm}
-\else
-\includegraphics[scale=0.15]{fcfm}
-\fi
-% \NAM{
-% \hspace*{6cm}\includegraphics[scale=0.15]{fcfm}
-% }{
-% \includegraphics[scale=0.15]{fcfm}
-% }
+\NAM{\hspace*{4.3cm}\includegraphics[scale=0.15]{fcfm}}{\includegraphics[scale=0.15]{fcfm}}
 \end{flushright}
 \end{minipage}
 \bigskip
