--- a/clases/clase3.tex
+++ b/clases/clase3.tex
@@ -1,5 +1,5 @@
 %!TEX root = ../notas_de_clase.tex
-DFFDVNJDGZNVKHVHHBVVVVVVVVVVV YER4YTER\ref{alg:bnb}\begin{€T\ref{alg:bnb}\begin{T\ref{alg:bnb}6ER6RYREETYERWTEW\ref{alg:bnb}\begin{T6 UY#~¬4T~¬T #~¬¬~#TR6TTT \begin{GGGGSDGHDHSCYYXYSDXD\documentclass[10pt]{article}
+\documentclass[10pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[activeacute,spanish,es-nodecimaldot]{babel}
 \usepackage[left=1.5cm,top=1.5cm,right=1.5cm, bottom=1.5cm,letterpaper, includeheadfoot]{geometry}
