Agregado los pdf's de las clases

--- a/utils/encabezado.tex
+++ b/utils/encabezado.tex
@@ -10,7 +10,7 @@
 \fancyhead[R]{Universidad de Chile}
 \vspace*{-1.2 cm}
 % notas al margen
-\NAM{\begin{minipage}{0.7\textwidth}}{0.6\textwidth}
+\NAM{\begin{minipage}{0.7\textwidth}}{\begin{minipage}{0.6\textwidth}}
 \begin{flushleft}
 \hspace*{-0.5cm}\textbf{MA4702. Programación Lineal Mixta. 2020.}\\
 \hspace*{-0.5cm}\textbf{Profesor:} José Soto\\
