Unidas las clases en un solo pdf

--- a/clases/clase1.tex
+++ b/clases/clase1.tex
@@ -10,10 +10,10 @@
 %%%%%%%%%%%%%%%%%%
 
 %Macros para este documento
-\newcommand{\cin}{\operatorname{cint}}
+% \newcommand{\cin}{\operatorname{cint}}
 
+% \begin{document}
 
-\begin{document}
 %Encabezado
 \input{utils/encabezado}
 %Fin encabezado
@@ -284,7 +284,7 @@ Mostraremos en el curso que el problema es posible relajarse y en vez de conside
 \end{eje}
 
 
-\end{document}
+% \end{document}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
