--- a/clases/clase2.tex
+++ b/clases/clase2.tex
@@ -10,10 +10,10 @@
 %%%%%%%%%%%%%%%%%%
 
 %Macros para este documento
-\newcommand{\cin}{\operatorname{cint}}
+% \newcommand{\cin}{\operatorname{cint}}
 
 
-\begin{document}
+% \begin{document}
 %Encabezado
 \input{utils/encabezado}
 %Fin encabezado
@@ -390,7 +390,7 @@ Cada instancia del problema (MST) se describe de manera compacta indicando un gr
 \end{comment}
 %%NO ESTA LISTO TENGO Q TERMINAR EL ULTIMO EJEMPLO UWU
 
-\end{document}
+% \end{document}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
