--- a/main.tex
+++ b/main.tex
@@ -14,10 +14,14 @@
 \input{utils/cmd}
 % ============================
 
-% clase que se quiere consultar
-\includeonly{clases/clase1}
+%Macros para este documento
+\newcommand{\cin}{\operatorname{cint}}
 
+% clase que se quiere consultar
+% \includeonly{clases/clase1}
+\begin{document}
 % clases
 \include{clases/clase1}
 \include{clases/clase2}
 \include{clases/clase3}
+\end{document}
