--- a/main.tex
+++ b/main.tex
@@ -12,13 +12,14 @@
 
 % comandos y macros
 \input{utils/cmd}
-% ============================
 
 %Macros para este documento
 \newcommand{\cin}{\operatorname{cint}}
+% ============================
 
 % clase que se quiere consultar
-% \includeonly{clases/clase1}
+\includeonly{clases/clase3}
+
 \begin{document}
 % clases
 \include{clases/clase1}
