--- a/utils/cmd.tex
+++ b/utils/cmd.tex
@@ -43,11 +43,7 @@
 
 % Comando para notas al margen
 \def\NAM#1#2{
-\ifnum \notasalmargen=1
-#1
-\else
-#2
-\fi
+\ifnum \notasalmargen=1 #1 \else #2 \fi
 }
 
 % =========== Clase 3 ===============
