--- a/main.tex
+++ b/main.tex
@@ -3,6 +3,7 @@
 % usar notas al margen (1 para usar notas al margen, 0 si no)
 \def\notasalmargen{1}
 
+
 % ========= no tocar ========== 
 % preámbulo
 \input{utils/preambulo}
@@ -18,7 +19,7 @@
 % ============================
 
 % clase que se quiere consultar
-\includeonly{clases/clase3}
+% \includeonly{clases/clase3}
 
 \begin{document}
 % clases
