Arreglado el error de los escribas, fechas y cátedras

--- a/clases/clase1.tex
+++ b/clases/clase1.tex
@@ -1,11 +1,11 @@
 %!TEX root = ../notas_de_clase.tex
 
 %%%%% NOMBRE ESCRIBAS Y FECHA
-\newcommand{\sca}{Sebastian Bustos}
-\newcommand{\scb}{Felipe Hernández}
-\newcommand{\scc}{Nicolás Toro}
-\newcommand{\catnum}{1} %numero de catedra
-\newcommand{\fecha}{20 de marzo de 2020}
+\renewcommand{\sca}{Sebastian Bustos}
+\renewcommand{\scb}{Felipe Hernández}
+\renewcommand{\scc}{Nicolás Toro}
+\renewcommand{\catnum}{1} %numero de catedra
+\renewcommand{\fecha}{20 de marzo de 2020}
 
 %%%%%%%%%%%%%%%%%%
 
