--- a/clases/clase2.tex
+++ b/clases/clase2.tex
@@ -1,17 +1,13 @@
 %!TEX root = ../notas_de_clase.tex
 
 %%%%% NOMBRE ESCRIBAS Y FECHA
-\newcommand{\sca}{Matías Azócar}
-\newcommand{\scb}{Carolina Chiu}
-\newcommand{\scc}{Francisco Muñoz}
-\newcommand{\catnum}{2} %numero de catedra
-\newcommand{\fecha}{\today}
+\renewcommand{\sca}{Matías Azócar}
+\renewcommand{\scb}{Carolina Chiu}
+\renewcommand{\scc}{Francisco Muñoz}
+\renewcommand{\catnum}{2} %numero de catedra
+\renewcommand{\fecha}{23 de marzo de 2020}
 
 %%%%%%%%%%%%%%%%%%
-
-%Macros para este documento
-% \newcommand{\cin}{\operatorname{cint}}
-
 
 % \begin{document}
 %Encabezado
