--- a/clases/clase3.tex
+++ b/clases/clase3.tex
@@ -1,11 +1,11 @@
 %!TEX root = ../notas_de_clase.tex
 
 %%%%% NOMBRE ESCRIBAS Y FECHA
-\newcommand{\sca}{Escriba Uno}
-\newcommand{\scb}{Escriba Dos}
-\newcommand{\scc}{Escriba Tres}
-\newcommand{\catnum}{3} %numero de catedra
-\newcommand{\fecha}{27 de Marzo 2020}
+% \rerenewcommand{\sca}{Escriba Uno}
+% \rerenewcommand{\scb}{Escriba Dos}
+% \rerenewcommand{\scc}{Escriba Tres}
+\renewcommand{\catnum}{3} %numero de catedra
+\renewcommand{\fecha}{27 de Marzo 2020}
 
 %%%%%%%%%%%%%%%%%%
 
