--- a/utils/formato.tex
+++ b/utils/formato.tex
@@ -4,3 +4,6 @@
 \lhead{\footnotesize\itshape\bfseries\rightmark}
 \rhead{\footnotesize\itshape\bfseries\leftmark}
 }
+
+\fancyhead[L]{Facultad de Ciencias Físicas y Matemáticas}
+\fancyhead[R]{Universidad de Chile}
