Updates from Overleaf

--- a/clases/clase03.tex
+++ b/clases/clase03.tex
@@ -9,7 +9,7 @@
 
 %%%%%%%%%%%%%%%%%%
 
-\begin{document}
+% \begin{document}
 \shorthandoff{>}\shorthandoff{<}
 %Encabezado
 
@@ -835,7 +835,7 @@ Best objective 1.900000000000e+01, best bound 1.900000000000e+01, gap 0.0000%
     
     En realidad BnB no es un buen método por si solo. Lo ideal es mejorar la formulación en cada nodo. Esto se puede hacer automáticamente mediante el uso de planos cortantes, como lo veremos más adelante.
     
-\end{document}
+% \end{document}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
