--- a/utils/cmd.tex
+++ b/utils/cmd.tex
@@ -17,6 +17,11 @@
 \newcommand{\OPT}{\mathrm{OPT}}
 \newcommand{\Ord}[1][n]{\ensuremath{ \mathcal{O}(#1) }}
 \DeclareMathOperator{\conv}{conv}
+\newcommand{\R}{\mathbb{R}}
+\newcommand{\Z}{\mathbb{Z}}
+\newcommand{\N}{\mathbb{N}}
+\newcommand{\Q}{\mathbb{Q}}
+\newcommand{\ox}{\overline{x}}
 
 %Teoremas, Lemas, etc.
 \theoremstyle{plain}
