--- a/utils/formato.tex
+++ b/utils/formato.tex
@@ -1,3 +1,10 @@
+% CONFIG DE PAGINA
+% \geometry{letterpaper, margin=1.5cm, tmargin=2cm}
+\usetikzlibrary{arrows}
+\definecolor{rvwvcq}{rgb}{0.08235294117647059,0.396078431372549,0.7529411764705882}
+\definecolor{wrwrwr}{rgb}{0.3803921568627451,0.3803921568627451,0.3803921568627451}
+\pgfplotsset{compat=1.15}
+
 \pagestyle{fancy}
 \fancypagestyle{plain}{%
 \fancyhf{}
