--- a/utils/preambulo.tex
+++ b/utils/preambulo.tex
@@ -1,4 +1,3 @@
-
 % =======================
 \usepackage[utf8]{inputenc}
 \usepackage[activeacute,spanish,es-nodecimaldot]{babel}
@@ -15,7 +14,7 @@
 \usepackage{paralist} %util para listas compactas
 \usepackage{verbatim}
 \usepackage{float}
-\usepackage{tikz}
+\usepackage{pgf,tikz,pgfplots}
 \usetikzlibrary{babel}
 \usepackage{marginnote} % paquete para notas al margren
 \renewcommand*{\marginfont}{\color{red}\sffamily} % fuente de las notas al margen
@@ -35,5 +34,7 @@
 \useforestlibrary{edges}
 \usepackage[noend]{algpseudocode}
 \usepackage{algorithm,algorithmicx}
+\usepackage{imakeidx}
 
 \usepackage{fancyhdr}
+
